--- a/new-project.cabal
+++ b/new-project.cabal
@@ -61,7 +61,7 @@ executable Haskell
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    -- other-modules: Html/Internal.hs
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
